Fix typo in meta description in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Džejlan Toskić - Šampion Srbije u boksu iz Novog Pazara. Profesionalni bokser, velter kategorija. Treninzi, saradnja i boksersłe usluge." />
+    <meta name="description" content="Džejlan Toskić - Šampion Srbije u boksu iz Novog Pazara. Profesionalni bokser, velter kategorija. Treninzi, saradnja i bokserske usluge." />
     <meta name="keywords" content="Džejlan Toskić, bokser, Novi Pazar, šampion Srbije, boks, treninzi, profesionalni bokser, velter kategorija" />
     <title>Džejlan Toskić - Šampion Srbije u Boksu | Novi Pazar</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
